--- a/.devcontainer/roles/redmine/templates/my.cnf.j2
+++ b/.devcontainer/roles/redmine/templates/my.cnf.j2
@@ -2,8 +2,8 @@
 auto-rehash
 
 [client]
-database={{ redmine_database[redmine_environment].database }}
-user={{ redmine_database[redmine_environment].username }}
-password={{ redmine_database[redmine_environment].password }}
-host=mariadb
-default-character-set=utf8mb4
+database={{ redmine_database[redmine_env].database }}
+user={{ redmine_database[redmine_env].username }}
+password={{ redmine_database[redmine_env].password }}
+host={{ redmine_database[redmine_env].host }}
+default-character-set={{ redmine_database[redmine_env].encoding }}
