開発環境の構築処理を調整

--- a/.devcontainer/roles/redmine/templates/my.cnf.j2
+++ b/.devcontainer/roles/redmine/templates/my.cnf.j2
@@ -2,8 +2,8 @@
 auto-rehash
 
 [client]
-database={{ redmine_database[redmine_env].database }}
-user={{ redmine_database[redmine_env].username }}
-password={{ redmine_database[redmine_env].password }}
-host={{ redmine_database[redmine_env].host }}
-default-character-set={{ redmine_database[redmine_env].encoding }}
+database={{ redmine_database[redmine_rails_env].database }}
+user={{ redmine_database[redmine_rails_env].username }}
+password={{ redmine_database[redmine_rails_env].password }}
+host={{ redmine_database[redmine_rails_env].host }}
+default-character-set={{ redmine_database[redmine_rails_env].encoding }}
